2023-10-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/libpoke.h (pk_load): Add `exit_exception' parameter.
	* libpoke/libpoke.c (pk_load): Likewise.
	* libpoke/pkl.h (pkl_load): Likewise.
	* libpoke/pkl.c (pkl_load): Likewise.
	* poke/pk-cmd.c (pk_cmd_init): Call default handler for loading
	`pk-cmd' module.
	* poke/poke.c (initialize): Update use of `pk_load'.
	* pokefmt/pokefmt.l (poke_init): Likewise.
	* testsuite/poke.libpoke/api.c (test_pk_load): New function for
	`pk_load'-related tests.
	(main): Call `test_pk_load'.

2023-10-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/libpoke.h (LIBPOKE_NONNULL): New macro for nonnull attribute
	for functions.
	(pk_compile_file): Use `LIBPOKE_NONNULL'.
	(pk_compile_buffer): Likewise.
	(pk_compile_buffer_with_loc): Likewise.
	(pk_compile_statement): Likewise.
	(pk_compile_statement_with_loc): Likewise.
	(pk_compile_expression): Likewise.
	(pk_compile_expression_with_loc): Likewise.

2023-10-06  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/hacking.org: List Mohammad-Reza Nabipoor as GNU maintainer.

2023-10-04 Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>

	* etc/hacking.org (Write After Approval): Update.
    * HACKING: Regenerate.

2023-10-04  Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>

	* etc/nix/default.nix: remove the empty line at the EOF.

2023-10-02  Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>

	* etc/nix/default.nix: add a simple nix shell.

2023-09-25  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/libpoke.c (pk_compiler_new_with_flags): Add checks for
	presence of user-provided function pointers for the terminal
	interface.
	* testsuite/poke.libpoke/api.c (test_pk_compiler_new): Update tests.

2023-09-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* etc/hacking.org (Maintainers): Update.
	* HACKING: Regenerate.

2023-09-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* configure.ac (AC_CONFIG_FILES): Add `pokefmt/Makefile'.